--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,7 @@
     background-image: linear-gradient(to right, rgba(100, 100, 100, 0.1) 1px, transparent 1px), linear-gradient(to bottom, rgba(100, 100, 100, 0.1) 1px, transparent 1px);
     background-size: 2rem 2rem;
 }
+
+.animate-float {
+  animation: float 6s ease-in-out infinite;
+}
