--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,14 +127,19 @@
 
 @keyframes rise {
   0% {
-    transform: translateY(0);
-    opacity: 0;
-  }
-  10% {
+    transform: translateY(100vh) scale(0.5);
     opacity: 1;
   }
   100% {
-    transform: translateY(-100vh) rotate(360deg);
+    transform: translateY(-10vh) scale(1);
     opacity: 0;
   }
+}
+
+.heart {
+  position: absolute;
+  bottom: 0;
+  font-size: 2rem; /* Adjust size */
+  animation: rise 10s infinite ease-in;
+  color: hsl(var(--primary) / 0.5);
 }
