--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,7 +173,7 @@
   width: 100%;
   height: 100%;
   display: block;
-  background: transparent url(https://i.imgur.com/8u3215f.png) repeat top center;
+  background: transparent url('https://i.imgur.com/8u3215f.png') repeat top center;
   z-index: 2;
   animation: move-clouds-back 200s linear infinite;
   opacity: 0.3;
@@ -225,8 +225,8 @@
   border-radius: 100%;
   background-image: linear-gradient(
     to bottom,
-    rgba(148, 0, 211, 0.4),
-    rgba(75, 0, 130, 0)
+    hsla(var(--primary) / 0.4),
+    hsla(var(--primary) / 0)
   );
   animation: aurora-animation 5s linear infinite;
   transform-origin: bottom center;
@@ -276,5 +276,3 @@
     opacity: 0;
   }
 }
-
-    
