--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,85 +130,26 @@
   }
 }
 
-
-/* Starry Night Animation - CSS Only */
-@keyframes animStar {
-  from {
-    transform: translateY(0px);
+/* New star animation */
+@keyframes twinkle {
+  0%, 100% {
+    opacity: 1;
   }
-  to {
-    transform: translateY(-2000px);
+  50% {
+    opacity: 0.2;
   }
 }
 
-.stars-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.stars1, .stars2, .stars3 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.stars1 {
-  background: transparent;
-  box-shadow: 
-    10vw 20vh 1px #fff, 25vw 80vh 1px #fff, 70vw 30vh 1px #fff, 90vw 60vh 1px #fff,
-    5vw 90vh 1px #fff, 40vw 10vh 1px #fff, 80vw 5vh 1px #fff, 50vw 50vh 1px #fff;
-  animation: animStar 200s linear infinite;
-}
-
-.stars2 {
-  background: transparent;
-  box-shadow: 
-    15vw 40vh 2px #fff, 30vw 90vh 2px #fff, 60vw 15vh 2px #fff, 85vw 70vh 2px #fff,
-    2vw 60vh 2px #fff, 50vw 25vh 2px #fff, 95vw 10vh 2px #fff, 75vw 75vh 2px #fff;
-  animation: animStar 150s linear infinite;
-}
-
-.stars3 {
-  background: transparent;
-  box-shadow: 
-    5vw 5vh 3px #fff, 45vw 60vh 3px #fff, 80vw 20vh 3px #fff, 95vw 90vh 3px #fff,
-    10vw 70vh 3px #fff, 60vw 5vw 3px #fff, 20vw 45vh 3px #fff, 88vw 80vh 3px #fff;
-  animation: animStar 100s linear infinite;
-}
-
-
-@keyframes meteor-fall {
-    0% {
-        transform: translateX(0) translateY(0);
-        opacity: 1;
-    }
-    70% {
-        opacity: 1;
-    }
-    100% {
-        transform: translateX(-500px) translateY(500px);
-        opacity: 0;
-    }
-}
-
-.meteor {
+.star {
     position: absolute;
-    width: 2px;
-    height: 2px;
     background-color: white;
     border-radius: 50%;
-    box-shadow: 0 0 5px 0.5px #fff;
-    animation: meteor-fall 5s linear infinite;
+    animation-name: twinkle;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    will-change: opacity;
 }
+
 
 /* Vortex animation */
 @keyframes vortex-spin {
@@ -308,5 +249,6 @@
     opacity: 0.2;
     z-index: 1;
 }
+
 
 
