--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,7 +207,7 @@
 }
 .swiper-container-cube {
   width: 200px;
-  height: 200px;
+  height: 250px;
 }
 .swiper-container-cards {
   height: 320px;
@@ -243,6 +243,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  aspect-ratio: 3 / 4; /* Mais vertical */
 }
 .slide-image-wrapper img {
     object-fit: cover;
